--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="static/js/mui.min.js"></script>
+  <script src="static/js/mui.js"></script>
   <!-- built files will be auto injected -->
 </body>
 </html>
